--- a/templates/home.html
+++ b/templates/home.html
@@ -73,9 +73,10 @@
     <!-- Today's Special Section -->
     <section class="todays-special">
       <h2 data-i18n="todays_special">Today's Special</h2>
-      <div class="special-items">
-          <div class="loading" data-i18n="loading_specials">Loading today's specials...</div>
+      <div class="special-items" id="today-special">
+        <div class="loading" data-i18n="loading_specials">Loading today's specials...</div>
       </div>
+
     </section>
 
     <!-- About Section -->
@@ -210,10 +211,10 @@
     </nav>
   </footer>
 
-  <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/language.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/home.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/menu-api.js') }}"></script>
+<script src="{{ url_for('static', filename='js/translations.js') }}"></script>
+<script src="{{ url_for('static', filename='js/language.js') }}"></script>
+<script src="{{ url_for('static', filename='js/menu-api.js') }}"></script>
+<script src="{{ url_for('static', filename='js/home.js') }}"></script>
 
 </body>
 </html>
