--- a/templates/admin-dashboard.html
+++ b/templates/admin-dashboard.html
@@ -189,7 +189,7 @@
   </script>
 
   <!-- Admin Dashboard JS -->
-  <script src="../static/js/admin-dashboard.js"></script>
+  <script src="{{ url_for('static', filename='js/admin-dashboard.js') }}"></script>
 
 </body>
 </html>
